feat: goride and gofood in progress
