# packages/user-service/src/controller.js
@@ -1,7 +1,6 @@
 const bcrypt = require("bcrypt");
 const jwt = require("jsonwebtoken");
 const pool = require("./db");
-require("dotenv").config();
 
 const registerUser = async (req, res) => {
   try {
@@ -45,7 +44,7 @@ const loginUser = async (req, res) => {
   try {
     // Generate JWT token
     const token = jwt.sign(
-      { username: req.user.username },
+      { user_id: req.user.user_id, username: req.user.username },
       process.env.SECRET_KEY
     );
     res.status(200).json({ message: "Login successful", accessToken: token });
@@ -54,4 +53,78 @@ const loginUser = async (req, res) => {
   }
 };
 
-module.exports = { registerUser, loginUser };
+const updateUser = async (req, res) => {
+  try {
+    const { username, email, password, phone_number, address } = req.body;
+    const user = await pool.query("SELECT * FROM users WHERE email = $1", [
+      email,
+    ]);
+    if (!user.rows.length) {
+      return res.status(404).json({ message: "User not found" });
+    }
+    // if field is empty, use the old value
+    const newUsername = username ? username : user.rows[0].username;
+    const newPhoneNumber = phone_number
+      ? phone_number
+      : user.rows[0].phone_number;
+    const newAddress = address ? address : user.rows[0].address;
+
+    // if password is empty, use the old value
+    if (!password) {
+      pool.query(
+        "UPDATE users SET username = $1, phone_number = $2, address = $3 WHERE email = $4",
+        [newUsername, newPhoneNumber, newAddress, email],
+        (error, results) => {
+          if (error) {
+            return res.status(500).json({ message: "Error updating user" });
+          }
+          res.status(200).json({ message: "User updated successfully" });
+        }
+      );
+    }
+    // Hash password before saving
+    bcrypt.hash(password, 10, (err, hash) => {
+      if (err) {
+        return res.status(500).json({ message: "Error hashing password" });
+      }
+      pool.query(
+        "UPDATE users SET username = $1, password = $2, phone_number = $3, address = $4 WHERE email = $5",
+        [newUsername, hash, newPhoneNumber, newAddress, email],
+        (error, results) => {
+          if (error) {
+            return res.status(500).json({ message: "Error updating user" });
+          }
+          res.status(200).json({ message: "User updated successfully" });
+        }
+      );
+    });
+  } catch (error) {
+    res.status(500).json({ message: "Internal Server Error" });
+  }
+};
+
+const deleteUser = async (req, res) => {
+  try {
+    const { email } = req.body;
+    const user = await pool.query("SELECT * FROM users WHERE email = $1", [
+      email,
+    ]);
+    if (!user.rows.length) {
+      return res.status(404).json({ message: "User not found" });
+    }
+    pool.query(
+      "DELETE FROM users WHERE email = $1",
+      [email],
+      (error, results) => {
+        if (error) {
+          return res.status(500).json({ message: "Error deleting user" });
+        }
+        res.status(200).json({ message: "User deleted successfully" });
+      }
+    );
+  } catch (error) {
+    res.status(500).json({ message: "Internal Server Error" });
+  }
+};
+
+module.exports = { registerUser, loginUser, updateUser, deleteUser };
